Simplified markdown file storage | Delete markdown storage files | Added scout search to Article | UrlGenerator only respects private disk | Simplified disks in filesystems.php | Fixed web vs api middleware issue | Added /api/v1 as prefix | Resource filters and toggles
